force-app/main/default/objects/footprint__Footprint_Line_Item_Detail__c/fields/footprint__Foot_Print_Line_Item_Detail_rt__c.field-meta.xml
<CustomField>
    <fullName>footprint__Foot_Print_Line_Item_Detail_rt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Footprint Record Type</label>
    <referenceTo>footprint__Foot_Print_RecordType__c</referenceTo>
    <relationshipLabel>Footprint Record Type Detail</relationshipLabel>
    <relationshipName>Footprint_Line_Item_Details</relationshipName>
    <type>Lookup</type>
</CustomField>