force-app/main/default/objects/footprint__Footprint_Line_Item_Detail__c/fields/footprint__Footprint_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>footprint__Footprint_Line_Item__c</fullName>
    <label>Field</label>
    <referenceTo>footprint__Footprint_Line_Item__c</referenceTo>
    <relationshipLabel>Footprint Field Record Type</relationshipLabel>
    <relationshipName>Footprint_Line_Item_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>