force-app/main/default/objects/footprint__Footprint_Line_Item_Detail__c/fields/footprint__Footprint_Line_Item_Detail_Pop_On__c.field-meta.xml
<CustomField>
    <fullName>footprint__Footprint_Line_Item_Detail_Pop_On__c</fullName>
    <label>Populated On</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>