force-app/main/default/objects/footprint__Footprint_Line_Item_Detail__c/fields/footprint__Footprint_Line_Item_Detail_Pop_OnGlo_per__c.field-meta.xml
<CustomField>
    <fullName>footprint__Footprint_Line_Item_Detail_Pop_OnGlo_per__c</fullName>
    <formula>IF( footprint__Footprint_Line_Item__r.footprint__Footprint_Line_Items_Object_Analysis__r.footprint__FootPrint_Records__c &gt; 0 ,  footprint__Footprint_Line_Item_Detail_Pop_On__c/footprint__Footprint_Line_Item__r.footprint__Footprint_Line_Items_Object_Analysis__r.footprint__FootPrint_Records__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Populated On Global (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>